# iot-reference-arm-corstone3xx

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Getting_Started_Guide.md  LICENSE  NOTICE.txt  README.md  conftest.py  cspell.config.yaml  manifest.yml  pyproject.toml  setup.cfg
Bsp/: CMakeLists.txt  an552_ns.ld  an552_ns.sct
Bsp/cmake/: BspUtilities.cmake
Bsp/common/: bsp_serial.c  bsp_serial.h
Bsp/corstone300/: an552_ns.ld  an552_ns.sct
Bsp/corstone300/include/: FreeRTOSConfig_target.h  provisioning_config_target.h
Bsp/corstone310/: an555_ns.ld  an555_ns.sct
Bsp/corstone310/include/: provisioning_config_target.h
Bsp/platform/: bsp_serial.c
Middleware/ARM/: CMakeLists.txt
Middleware/ARM/IoT_Socket-lib/: CMakeLists.txt
Middleware/ARM/IoT_VSocket-lib/: 0001-Replace-CMSIS-RTX-APIs-with-FreeRTOS-APIs.patch  CMakeLists.txt  network_startup.c  socket_startup.c  transport_interface_api.h  transport_tls_iot_socket.c
Middleware/ARM/TF-M/: 0001-cs310-tfm-Fix-Ethos-U-git-link.patch  0001-platform-Fix-provisioning-bundle-cmake-error.patch  CMakeLists.txt
Middleware/ARM/freertos-ota-pal-psa-lib/: CMakeLists.txt
Middleware/ARM/freertos-pkcs11-psa-lib/: CMakeLists.txt
Middleware/ARM/mbedtls-lib/: CMakeLists.txt
Middleware/AWS/: CMakeLists.txt
Middleware/AWS/cmake/: GenerateAWSUpdateDigestAndSignature.cmake
Middleware/AWS/logging/: CMakeLists.txt
Projects/aws-iot-example/: CMakeLists.txt  aws_dev_mode_key_provisioning.c  dev_mode_key_provisioning.c  main.c  mqtt_demo_pub_sub.c
Projects/aws-iot-example/configs/: CMakeLists.txt
Projects/aws-iot-example/event-helper/: CMakeLists.txt  event_helper.c  event_helper.h
Projects/aws-iot-example/freertos-integration-tests/: integration_tests_platform_function.c
Projects/aws-iot-example/logging/: iot_logging_task_dynamic_buffers.c
Projects/aws-iot-example/mqtt-agent-wrapper/: CMakeLists.txt  event_helper.h  freertos_command_pool.c  mqtt_agent_task.c  ota_agent_task.c  ota_mqtt_agent.c  subscription_manager.c  subscription_manager.h
Projects/aws-iot-example/provisioning/: CMakeLists.txt  generate_credentials_header.py  linkerscript_preprocess.cmake  provisioning_config.h  provisioning_data.c  provisioning_data.h  provisioning_data.ld  provisioning_data.sct
Projects/blinky/: CMakeLists.txt  main.c
Projects/blinky/configs/: CMakeLists.txt
applications/aws_iot_example/: CMakeLists.txt  dev_mode_key_provisioning.c  main.c
applications/aws_iot_example/configs/: CMakeLists.txt
applications/aws_iot_example/freertos_integration_tests/: integration_tests_platform_function.c  unistd.h
applications/blinky/: CMakeLists.txt  TfmInitialCache.cmake
applications/blinky/configs/: CMakeLists.txt
applications/freertos_iot_libraries_tests/: CMakeLists.txt  TfmInitialCache.cmake  integration_tests_platform_function.c  main.c  test_execution_config.h  test_param_config.h
applications/freertos_iot_libraries_tests/configs/: CMakeLists.txt
applications/helpers/: CMakeLists.txt
applications/helpers/crt_helpers/: CMakeLists.txt
applications/helpers/device_advisor/: CMakeLists.txt
applications/helpers/events/: CMakeLists.txt
applications/helpers/hdlcd/: CMakeLists.txt  hdlcd_helper.c  hdlcd_helper.h
applications/helpers/logging/: CMakeLists.txt
applications/helpers/ota_orchestrator/: CMakeLists.txt
applications/helpers/provisioning/: CMakeLists.txt  dev_mode_key_provisioning.c  dev_mode_key_provisioning.h  provisioning_data.ld
applications/helpers/sntp/: CMakeLists.txt
applications/keyword_detection/: CMakeLists.txt  TfmInitialCache.cmake  blink_task.c  blink_task.h  main.c  ml_interface.cc  ml_interface.h  model_config.cc
applications/keyword_detection/ml-model-update-demo/: faulty_kws_micronet_m.tflite  kws_micronet_m.tflite
applications/keyword_detection/resources/: use_case_resources.json
applications/object_detection/: CMakeLists.txt  TfmInitialCache.cmake  blink_task.c  blink_task.h  main.c  ml_interface.cc  ml_interface.h
applications/object_detection/configs/: CMakeLists.txt
applications/object_detection/isp/: CMakeLists.txt  acamera_callbacks.c  isp_app.c  isp_config.c  isp_config.h
applications/object_detection/resources/: test.frm  use_case_resources.json
applications/speech_recognition/: CMakeLists.txt  TfmInitialCache.cmake  blink_task.c  blink_task.h  dsp_task.h  main.c  ml_interface.cc  ml_interface.h  model_config.cc  model_config.h
applications/speech_recognition/resources/: use_case_resources.json
bsp/: CMakeLists.txt
bsp/cmake/: BspUtilities.cmake  SetLinkerOptions.cmake
bsp/common/: bsp_serial.c  bsp_serial.h  mps3_leds.c  mps3_leds.h  syscalls_stub.c
bsp/corstone300/: an552_ns.ld  an552_ns.sct  an552_ns_keyword_ml_model_update.ld
bsp/corstone300/include/: FreeRTOSConfig_target.h  RTE_Components.h  device_cfg.h  ethos-u55.h
bsp/corstone310/: an555_ns.ld  an555_ns.sct  an555_ns_keyword_ml_model_update.ld
bsp/corstone310/include/: FreeRTOSConfig_target.h  device_cfg.h  ethos-u55.h
bsp/corstone315/: corstone_315_ns.ld  corstone_315_ns.sct
bsp/corstone315/include/: FreeRTOSConfig_target.h  RTE_Components.h  device_cfg.h
bsp/corstone320/: corstone_320_ns.ld  corstone_320_ns_keyword_ml_model_update.ld
bsp/corstone320/include/: FreeRTOSConfig_target.h  device_cfg.h  provisioning_config_target.h
bsp/isp_mali-c55/: CMakeLists.txt
bsp/patches/: 0001-bsp-Add-CMSIS-Driver-implementation-for-VSI.patch  0001-corstone300-Add-missing-FVP-VSI-handlers.patch  0002-platform-irq-Add-VSI-IRQ-numbers-for-CS300-and-CS310.patch  0003-bsp-Add-CMSIS-Driver-implementation-for-VSI.patch
components/: CMakeLists.txt  README.md
components/ai/: CMakeLists.txt
components/aws_iot/: CMakeLists.txt
components/connectivity/: CMakeLists.txt
components/freertos_kernel/: CMakeLists.txt
components/graphics/: CMakeLists.txt
components/security/: CMakeLists.txt
components/tools/: CMakeLists.txt
tools/ci/: aws_cleanup.py  generate_credentials.sh  pipeline-baseline-fri.yml  pyproject.toml  setup.cfg
(+581 files in other folders)
