# Copyright 2022-2023 Arm Limited and/or its affiliates
# <open-source-office@arm.com>
# SPDX-License-Identifier: MIT

[metadata]
name = iot-reference-arm-corstone3xx
description = Featured FreeRTOS IoT Integration targeting an Arm Corstone-3xx platform based on Arm Cortex-M MCU.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.md

[options]
packages = find:

[options.entry_points]
console_scripts =
    banned-api-hook = tools.ci.hooks.banned_api:main

[options.package_data]
* = *.txt
